# android-ffmpeg-player

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/fm/fmplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FmPlayer.cpp  FmPlayer.h  JNICallbackHelper.cpp  JNICallbackHelper.h  audio_channel.cpp  audio_channel.h  base_channel.h  log4c.h  native-lib.cpp  safe_queue.h  util.h  video_channel.cpp  video_channel.h
app/src/main/cpp/ffmpeg/include/libavcodec/: avcodec.h  avdct.h  mediacodec.h  version.h
app/src/main/cpp/ffmpeg/include/libavfilter/: avfilter.h  version.h
app/src/main/cpp/ffmpeg/include/libavformat/: avformat.h  avio.h  version.h
app/src/main/cpp/ffmpeg/include/libavutil/: avutil.h  bprint.h  frame.h  hash.h  mathematics.h  parseutils.h  time.h  timecode.h  timestamp.h  version.h
app/src/main/cpp/ffmpeg/include/libswresample/: swresample.h
app/src/main/cpp/ffmpeg/include/libswscale/: swscale.h  version.h
app/src/main/java/com/fm/fmplayer/: FmPlayer.kt  MainActivity.kt
app/src/main/java/com/fm/fmplayer/utils/: TimeFormatUtil.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/fm/fmplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
